src/test/compile-fail/static-assert2.rs
#[static_assert]
static E: bool = 1 == 2; //~ ERROR static assertion failed

fn main() {}
